--- a/_config.yml
+++ b/_config.yml
@@ -256,10 +256,10 @@ reward:
 # Post edit
 # Easily browse and edit blog source code online.
 post_edit: # 目前仅可选择一个平台在线编辑
-  enable: false
-  # github: https://github.com/user-name/repo-name/edit/branch-name/subdirectory-name/
+  enable: true
+   github: https://github.com/hxer520/hexxo-theme-anzhiyu/edit/main/source/
   # For example: https://github.com/jerryc127/butterfly.js.org/edit/main/source/
-  github: false
+  # github: false
 
   # yuque: https://www.yuque.com/user-name/repo-name/
   # 示例: https://www.yuque.com/yuque/yuque/
